--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
 
     <title>Weather App</title>
   </head>
+  <style>
+    @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400&display=swap");
+  </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
