Continued meta description to make page SEO friendly

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Weather app using a search engine and API."
+      content="Weather app using a search engine and API that shows weather details of current day as well as a 5 day forecast. the weather details for current day include temperature which can convert between Celsius and Fahrenheit. The details for the 5 day forecast include temperature and a weather icon. "
     />
 
     <title>Weather App</title>
